--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -4,4 +4,5 @@
     <string name="set_time_limit" translatable="false">تحديد وقت الاستخدام</string>
     <string name="when_the_time_is_up_the_phone_will_lock">عند انتهى الوقت المحدد سوف يتم قفل الجهاز</string>
     <string name="start_timer">بداء المؤقت</string>
+    <string name="stop_timer">ايقاف المزقت</string>
 </resources>
