--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about" translatable="false">حول</string>
-    <string name="set_time_limit" translatable="false">تحديد وقت الاستخدام</string>
+    <string name="about" >حول</string>
+    <string name="set_time_limit" >تحديد وقت الاستخدام</string>
+    <string name="timer_is_starting">تم بدء المؤقت</string>
     <string name="when_the_time_is_up_the_phone_will_lock">عند انتهى الوقت المحدد سوف يتم قفل الجهاز</string>
     <string name="start_timer">بداء المؤقت</string>
     <string name="stop_timer">ايقاف المزقت</string>
+    <string name="minutes">دقائق</string>
 </resources>
