--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about" >حول</string>
     <string name="set_time_limit" >تحديد وقت الاستخدام</string>
     <string name="timer_is_starting">تم بدء المؤقت</string>
     <string name="when_the_time_is_up_the_phone_will_lock">عند انتهى الوقت المحدد سوف يتم قفل الجهاز</string>
     <string name="start_timer">بدء المؤقت</string>
     <string name="stop_timer">ايقاف المزقت</string>
     <string name="minutes">دقائق</string>
+    <string name="version">أصدار %1$s</string>
+    <string name="about" >حول</string>
 </resources>
