--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -5,7 +5,7 @@
     <string name="when_the_time_is_up_the_phone_will_lock">عند انتهى الوقت المحدد سوف يتم قفل الجهاز</string>
     <string name="start_timer">بدء المؤقت</string>
     <string name="stop_timer">ايقاف المزقت</string>
-    <string name="minutes">دقائق</string>
+    <string name="minutes">دقيقة</string>
     <string name="version">أصدار %1$s</string>
     <string name="about" >حول</string>
     <string name="time_s_up">انتهى الوقت</string>
