--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="when_the_time_is_up_the_phone_will_lock">When the time is up, the phone will lock</string>
     <string name="start_timer">Start Timer</string>
     <string name="stop_timer">Stop Timer</string>
-    <string name="minutes">Minutes</string>
+    <string name="minutes">Minute</string>
     <string name="about">About</string>
     <string name="developed_by_team_l" translatable="false">Developed by Team-L</string>
     <string name="version">Version %1$s</string>
