--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -4,7 +4,7 @@
     <string name="timer_is_starting">تم بدء المؤقت</string>
     <string name="when_the_time_is_up_the_phone_will_lock">عند انتهى الوقت المحدد سوف يتم قفل الجهاز</string>
     <string name="start_timer">بدء المؤقت</string>
-    <string name="stop_timer">ايقاف المزقت</string>
+    <string name="stop_timer">ايقاف المؤقت</string>
     <string name="minutes">دقيقة</string>
     <string name="version">أصدار %1$s</string>
     <string name="about" >حول</string>
